# ds-llm-detection

./: docker-compose.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/actions/node-tests/: action.yml
.github/workflows/: cd.yml
app/: __init__.py
app/lib/: detect_llm_usage.py  limiter.py
app/main/: routes.py
app/templates/: base.html
app/templates/errors/: api.html  page-not-found.html  rate.html  server.html
app/templates/main/: llm.html
src/styles/: main.scss
